--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,162 +1,66 @@
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-ExtraLightItalic.woff2') format('woff2'),
-  url('../fonts/Montserrat-ExtraLightItalic.woff') format('woff');
-  font-weight: 200;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Bold.woff2') format('woff2'),
-  url('../fonts/Montserrat-Bold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-ExtraLight.woff2') format('woff2'),
-  url('../fonts/Montserrat-ExtraLight.woff') format('woff');
-  font-weight: 200;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Black.woff2') format('woff2'),
-  url('../fonts/Montserrat-Black.woff') format('woff');
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-BlackItalic.woff2') format('woff2'),
-  url('../fonts/Montserrat-BlackItalic.woff') format('woff');
-  font-weight: 900;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-ExtraBoldItalic.woff2') format('woff2'),
-  url('../fonts/Montserrat-ExtraBoldItalic.woff') format('woff');
-  font-weight: bold;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-ExtraBold.woff2') format('woff2'),
-  url('../fonts/Montserrat-ExtraBold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-BoldItalic.woff2') format('woff2'),
-  url('../fonts/Montserrat-BoldItalic.woff') format('woff');
-  font-weight: bold;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Light.woff2') format('woff2'),
-  url('../fonts/Montserrat-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-MediumItalic.woff2') format('woff2'),
-  url('../fonts/Montserrat-MediumItalic.woff') format('woff');
-  font-weight: 500;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-LightItalic.woff2') format('woff2'),
-  url('../fonts/Montserrat-LightItalic.woff') format('woff');
-  font-weight: 300;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-ThinItalic.woff2') format('woff2'),
-  url('../fonts/Montserrat-ThinItalic.woff') format('woff');
-  font-weight: 100;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Medium.woff2') format('woff2'),
-  url('../fonts/Montserrat-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Italic.woff2') format('woff2'),
-  url('../fonts/Montserrat-Italic.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Thin.woff2') format('woff2'),
-  url('../fonts/Montserrat-Thin.woff') format('woff');
-  font-weight: 100;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
-  url('../fonts/Montserrat-SemiBold.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-SemiBoldItalic.woff2') format('woff2'),
-  url('../fonts/Montserrat-SemiBoldItalic.woff') format('woff');
-  font-weight: 600;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Regular.woff2') format('woff2'),
-  url('../fonts/Montserrat-Regular.woff') format('woff');
+  src: url('../fonts/monserrat/Montserrat-Regular.woff2') format('woff2'),
+  url('../fonts/monserrat/Montserrat-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/monserrat/Montserrat-Bold.woff2') format('woff2'),
+  url('../fonts/monserrat/Montserrat-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+.row-p{
+  .checkout__input-row{
+    margin: 0 -20px;
+    @media screen and (max-width: 479px){
+      margin: 0;
+    }
+  }
+  .checkout__radio-item{
+    padding: 0 20px 7px 0;
+  }
+  .textarea-bg{
+    height: 105px;
+    border-radius: 2px;
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    background-color: #f5f5f5;
+    padding: 10px 15px;
+    text-transform: none;
+    letter-spacing: normal;
+  }
+  .checkout__textarea {
+    padding: 0 0 30px 0;
+  }
+}
+
+.account{
+  &-logged {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    ul{
+      list-style: outside none none;
+      padding: 0;
+      margin: 0;
+    }
+    &__list-item {
+      padding-bottom: 4px;
+      a{
+        color: #fc6519;
+      }
+    }
+    &__box{
+      width: 100%;
+    }
+  }
 }
 
